--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,29 +1,27 @@
-name: PR Checks (Windows)
+name: Windows PR Check
 
 on:
   pull_request:
     branches:
-      - main  # or your default branch like 'master'
+      - main  # or any target branch for PRs
 
 jobs:
-  build:
-    name: Build and Test on Windows
+  build-and-test:
     runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python (Windows)
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'  # change as needed
+          python-version: '3.10'  # change based on your needs
 
-      - name: Install dependencies
+      - name: Install dependencies (Windows)
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: |
-          python hello.py  # or any other test framework you use
+      - name: Run tests (Windows)
+        run: python hello.py 
